# python-project-83

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  database.sql  init_db.py  pyproject.toml  sonar-project.properties  url_engine.py  url_repository.py
.github/workflows/: pyci.yml
page_analyzer/: app.py
page_analyzer/templates/: 404.html  index.html  layout.html  show.html  urls.html
tests/: test_app.py  test_engine.py  test_repository.py
