[project]
name = "hexlet-code"
version = "0.1.0"
description = "Page analyzer"
authors = [
        {name = "Vladimir Kirsanov", email = "vladimirkirs@bk.ru"}
    ]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=26.0.0",
    "psycopg>=3.3.4",
    "psycopg-binary>=3.3.4",
    "python-dotenv>=1.2.2",
    "validators>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
]
